style.css
* {
    font-family: Arial, sans-serif;
}

body {
  background-color: rgb(63, 55, 62);
  margin: 0 !important;
  padding: 0 !important;
	background: linear-gradient(-120deg, rgb(0, 0, 0), rgb(17, 17, 27), rgb(30, 30, 46),#45475a, rgb(30, 30, 46), rgb(17, 17, 27), rgb(0, 0, 0));
	background-size: 400% 400%;
	animation: gradient 20s ease infinite;
  color: #cdd6f4;
}

@font-face {
    font-family: 'homemade_appleregular';
    src: url('font/homemadeapple-webfont.woff2') format('woff2'),
         url('font/homemadeapple-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

.container {
    margin: 5px !important;
    padding: 5px !important;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.pfp {
    border-radius: 45px;
    margin-left: auto;
    margin-right: auto;
    animation: colorFade 10s infinite;
 }

 @keyframes colorFade {
    0% {
      box-shadow: 0px 0px 60px 10px rgb(255, 131, 249);
    }
    25% {
      box-shadow: 0px 0px 60px 10px #7fe5ff;
    }
    50% {
      box-shadow: 0px 0px 60px 10px #ffffff;
    }
    75% {
        box-shadow: 0px 0px 60px 10px #7fe5ff;
    }
    100% {
        box-shadow: 0px 0px 60px 10px rgb(255, 131, 249);
    }
  }

 .pfpdiv {
    display: block;
    margin-left: auto;
    width: 13.5em;
    margin-right: auto 
}

.boxes-container {
  float: center;
  margin: 0px auto;
  text-align: center !important;
  display: grid;
  grid-template-columns: repeat(3, 450px);
  grid-gap: var(--chakra-space-6);
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: var(--chakra-space-8);
  margin-bottom: var(--chakra-space-32);
}

.boxes {
    max-width: 400px;
    box-shadow: 0 0 96px rgba(255,255,255,0.025),0 0 64px rgba(255,255,255,0.025),0 0 32px rgba(255,255,255,0.025);
    border: solid 2px rgba(255,255,255,0.04);
    border-radius: 16px;
    display: inline-block;
    background-color: #1e1e2e;
    margin: 35px !important;
    padding: 10px !important;
    text-align: center;
  }
  .button {
    background-color: #dbc1ac;
    border-radius: 8px;
    border-style: none;
    box-sizing: border-box;
    color: #000000;
    cursor: pointer;
    display: inline-block;
    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    font-weight: 500;
    height: 40px;
    line-height: 20px;
    list-style: none;
    margin: 0;
    outline: none;
    padding: 10px 16px;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: color 100ms;
    vertical-align: baseline;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
  }
  
  .button:hover,
  .button:focus {
    background-color: #ffecdd;
  }

.bio {
    text-align: center;
}

